--- a/zh-CN/5.administrator-guide/6.basic-database-management/4.manage-tenants-1/4.manage-tenants-2/1.view-tenant-information.md
+++ b/zh-CN/5.administrator-guide/6.basic-database-management/4.manage-tenants-1/4.manage-tenants-2/1.view-tenant-information.md
@@ -45,6 +45,10 @@
    2 rows in set
    ```
 
+   > **说明**
+   >
+   > 暂不支持普通租户查看 `DBA_OB_TENANTS` 。
+
    更多视图 `oceanbase.DBA_OB_TENANTS` 的字段说明信息请参见 [DBA_OB_TENANTS](../../../../7.reference/3.system-views/2.dictionary-view-5/58.oceanbase-dba_ob_tenants.md)。
 
 ### 查看当前租户信息
