--- a/zh-CN/1.oceanbase-database/3.product-specification-limits.md
+++ b/zh-CN/1.oceanbase-database/3.product-specification-limits.md
@@ -79,13 +79,12 @@ OBProxy 最大连接数限制
 
 
 
-|   **类型**    | **最大长度** |
+| **类型**    | **最大长度** |
 |-------------|----------|
-| `CHAR`      | 255 字节   |
-| `VARCHAR`   | 65535 字节 |
-| `BINARY`    | 255 字节   |
-| `VARBINARY` | 65535 字节 |
-| `BLOB`      | 65535 字节 |
-| `TEXT`      | 65535 字节 |
-
+| `CHAR`      | 256 字节   |
+| `VARCHAR`   | 1048576 字节 |
+| `BINARY`    | 256 字节   |
+| `VARBINARY` | 1048576 字节 |
+| `BLOB`      | 50331648 字节 |
+| `TEXT`      | 50331648 字节 |
 
