--- a/zh-CN/5.administrator-guide/10.high-data-availability/1.administrator-guide-flashback/1.objects-supported-by-the-recycle-bin.md
+++ b/zh-CN/5.administrator-guide/10.high-data-availability/1.administrator-guide-flashback/1.objects-supported-by-the-recycle-bin.md
@@ -11,11 +11,11 @@
 |-----------|---------------|--------------|-------------------|----------------|
 | **MySQL** | √             | √            | √                 | √              |
 
-**注意**
-
-* 直接 `DROP` 索引不会进入回收站，删除表时，表上的索引会随主表一起进入回收站。
-
-* 不能对回收站的对象做任何查询和 DML 操作，DDL 操作中也仅支持 Purge 和 Flashback 操作。
+>**注意**
+>
+>* 直接 `DROP` 索引不会进入回收站，删除表时，表上的索引会随主表一起进入回收站。
+>
+>* 不能对回收站的对象做任何查询和 DML 操作，DDL 操作中也仅支持 Purge 和 Flashback 操作。
 
 相关阅读
 -------------------------
