--- a/zh-CN/7.reference/2.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/39.load-data.md
+++ b/zh-CN/7.reference/2.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/39.load-data.md
@@ -8,7 +8,7 @@ LOAD DATA
 
 该语句用于从外部导入数据。
 
-目前，OceanBase 数据库不支持 `LOCAL INFILE` 的语法加载数据文件。这是由于 OceanBase 是分布式数据库，读写数据由 Leader 节点进行，而 CSV 文件需要上传到 Leader 节点所在服务器才能加载，因此需要提供 NAS 文件系统进行文件存放。OceanBase 数据库中的 `LOAD DATA` 语句仅支持加载 OBServer 本地的输入文件。因此，用户需要在导入之前将文件拷贝到某台 OBServer 上。
+目前，OceanBase 数据库当前版本不支持 `LOCAL INFILE` 的语法加载数据文件, 计划后续版本将支持该功能。OceanBase 数据库中的 `LOAD DATA` 语句仅支持加载 OBServer 本地的输入文件。因此，用户需要在导入之前将文件拷贝到某台 OBServer 上。
 
 `LOAD DATA` 目前可以对 CSV 格式的文本文件进行导入，整个导入的过程可以分为以下的流程：
 
