合并文档 SQL 语法 和 管理数据库对象 更新

--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/4.manage-indexes-2/3.view-indexes-2.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/4.manage-indexes-2/3.view-indexes-2.md
@@ -1,5 +1,5 @@
 # 查看索引
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/view-indexes-2
+
 本节主要介绍索引的查看方法。
 
 使用 `SHOW INDEX` 语句查看表的索引。
@@ -18,7 +18,7 @@ obclient> SHOW INDEX FROM test;
 3 rows in set
 ```
 
-字段解释如下：
+字段说明：
 
 * `Seq_in_index` ：索引中的列序列号，一个是1一个是2，就是表明在联合索引中的顺序。
 
