恢复管理数据内容

--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/1.manage-databases-1/1.create-a-database-1.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/1.manage-databases-1/1.create-a-database-1.md
@@ -1,12 +1,12 @@
 # 创建数据库
-
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/create-a-database-1
 本节主要介绍 MySQL 模式中数据库的创建语句及操作方法。
 
 ## 通过 SQL 语句创建数据库
 
 您可以使用 `CREATE DATABASE` 语句创建数据库。
 
-示例：
+示例如下：
 
 * 创建数据库 `test2`，并指定字符集为 `UTF8`。
 
