--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/1.manage-databases-1/2.view-a-database-1.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/1.manage-databases-1/2.view-a-database-1.md
@@ -1,5 +1,5 @@
 # 查看数据库
-
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/view-a-database-1
 本节主要介绍 MySQL 模式中数据库的查看语句及操作方法。
 
 ## 使用 SQL 语句查看数据库
@@ -28,3 +28,5 @@ obclient> SHOW DATABASES;
 * `mysql` 库主要负责存储数据库的用户、权限设置、关键字等。
 
 * `test` 库是用户自己创建的库。
+
+
