--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/1.manage-databases-1/3.modify-a-database-1.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/1.manage-databases-1/3.modify-a-database-1.md
@@ -1,5 +1,5 @@
 # 修改数据库
-
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/modify-a-database-1
 本节主要介绍 MySQL 模式中数据库的修改语句及操作方法。
 
 ## 通过 SQL 语句修改数据库
