--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/1.manage-databases-1/4.delete-a-database-1.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/1.manage-databases-1/4.delete-a-database-1.md
@@ -1,10 +1,10 @@
 # 删除数据库
-
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/delete-a-database-1
 本节主要介绍 MySQL 模式中数据库的修改语句及操作方法。
 
 ## 通过 SQL 语句删除数据库
 
-您可以使用 `DROP DATABASE` 语句删除 MySQL 模式下租户的数据库。
+您可以使用 `DROP DATABASE`语句删除 MySQL 模式下租户的数据库。
 
 如果误删数据库，可以通过回收站功能进行恢复，前提是需要开启回收站功能，相关操作请参见 [数据库、表和索引回收站](../../../10.high-data-availability/1.flashback/2.database-table-and-index-recycle-bin.md)。
 
