--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/4.manage-indexes-2/4.delete-an-index-2.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/4.manage-indexes-2/4.delete-an-index-2.md
@@ -1,8 +1,8 @@
 # 删除索引
-
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/delete-an-index-2
 当索引过多时，维护开销会增大，您可以根据需要删除不必要的索引。
 
-## 语法
+## 格式
 
 删除索引的语法格式如下：
 
