--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/7.manage-triggers-1/2.create-a-dml-trigger.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/7.manage-triggers-1/2.create-a-dml-trigger.md
@@ -1,8 +1,8 @@
 # 创建 DML 触发器
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/create-a-dml-trigger
+## 创建触发器
 
-本文介绍如何创建触发器。
-
-## 前提条件
+您可以使用 `CREATE TRIGGER` 语句创建触发器。
 
 创建触发器的用户需要具备以下权限：
 
@@ -11,10 +11,6 @@
 * 触发器权限，即 `CREATE TRIGGER` 权限。
 
 * 触发器激活后要执行的语句的权限。
-
-## 语法
-
-您可以使用 `CREATE TRIGGER` 语句创建触发器。
 
 创建触发器的 SQL 语法如下：
 
@@ -54,6 +50,19 @@ OceanBase 数据库中也定义了 `NEW.columnName` 和 `OLD.columnName`：
 
 * `OLD.columnName` 是只读的，而 `NEW.columnName` 则可以在触发器中使用 `SET` 赋值。
 
+创建触发器的示例如下：
+
+创建一个触发器 `test_trg`，并将其与表 `test` 相关联，以激活 Insert 操作，且触发器充当累加器，将插入到表的列的值求和。
+
+```sql
+obclient>CREATE TABLE test (user_id INT, user_num DECIMAL(10,2));
+Query OK, 0 rows affected
+
+obclient> CREATE TRIGGER test_trg BEFORE INSERT ON test
+       FOR EACH ROW SET @sum = @sum + NEW.user_num;
+Query OK, 0 rows affected
+```
+
 此外，如果需要定义的触发器有多条执行语句时，可以使用 `BEGIN ... END` 语句，分别表示整个代码块的开始和结束。
 
 `BEGIN ... END` 语句的语法为：
@@ -80,40 +89,27 @@ DELIMITER new_delimiter
 >
 >使用 `DELIMITER` 命令修改结束符后，待语句执行结束，请务必将结束符修改为默认符号分号（;）。
 
-## 示例
+示例如下：
 
-* 创建一个触发器 `test_trg`，并将其与表 `test` 相关联，以激活 Insert 操作，且触发器充当累加器，将插入到表的列的值求和。
+```sql
+obclient>CREATE TABLE test (user_id INT, user_num DECIMAL(10,2));
+Query OK, 0 rows affected
 
-  ```sql
-  obclient>CREATE TABLE test (user_id INT, user_num DECIMAL(10,2));
-  Query OK, 0 rows affected
+obclient>DELIMITER #
 
-  obclient> CREATE TRIGGER test_trg BEFORE INSERT ON test
-        FOR EACH ROW SET @sum = @sum + NEW.user_num;
-  Query OK, 0 rows affected
-  ```
+obclient>CREATE TRIGGER test_trg BEFORE UPDATE ON test
+               FOR EACH ROW
+               BEGIN
+               IF NEW.user_num < 1 THEN
+              SET NEW.user_num  = 1;
+              ELSEIF NEW.user_num > 45 THEN
+              SET NEW.user_num= 45;
+             END IF;
+             END;#
+Query OK, 0 rows affected
 
-* 创建多条语句的触发器
-
-  ```sql
-  obclient>CREATE TABLE test (user_id INT, user_num DECIMAL(10,2));
-  Query OK, 0 rows affected
-
-  obclient>DELIMITER #
-
-  obclient>CREATE TRIGGER test_trg BEFORE UPDATE ON test
-                FOR EACH ROW
-                BEGIN
-                IF NEW.user_num < 1 THEN
-                SET NEW.user_num  = 1;
-                ELSEIF NEW.user_num > 45 THEN
-                SET NEW.user_num= 45;
-              END IF;
-              END;#
-  Query OK, 0 rows affected
-
-  obclient>DELIMITER ;
-  ```
+obclient>DELIMITER ;
+```
 
 ## 触发器的使用限制
 
