--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/4.manage-indexes-2/2.create-an-index-2.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/4.manage-indexes-2/2.create-an-index-2.md
@@ -1,51 +1,45 @@
 # 创建索引
-
-本文介绍了如何创建索引。
-
-## 背景信息
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/create-an-index-2
+您可以通过 `CREATE INDEX` 语句为表创建索引。
 
 OceanBase 数据库支持在非分区表和分区表上创建索引，索引可以是局部索引或全局索引，也可以是唯一索引或普通索引。如果是分区表的唯一索引，则局部的唯一索引必须包含表分区的分区键。
 
 本节主要介绍如何在非分区表上创建索引，分区表上索引的创建请参见 [在分区表上建立索引](../../../8.distributed-storage-management/2.manage-partition-table/1.oracle-1/9.create-partition-table-index-2/2.local-index.md) 章节。
 
-## 语法
+创建索引的 SQL 语法格式如下：
 
-* 您可以通过 `CREATE INDEX` 语句为表创建索引。
+```sql
+CREATE [UNIQUE] INDEX index_name ON table_name ( column_list ) [LOCAL | GLOBAL] [ PARTITION BY column_list PARTITIONS N ] ;
+```
 
-  ```sql
-  CREATE [UNIQUE] INDEX index_name ON table_name ( column_list ) [LOCAL | GLOBAL] [ PARTITION BY column_list PARTITIONS N ] ;
-  ```
+字段解释如下：
 
-  字段说明：
+* `UNIQUE` ：代表唯一索引。
 
-  * `UNIQUE` ：代表唯一索引。
+* `table_name` ：表名，指需要创建索引的表。
 
-  * `table_name` ：表名，指需要创建索引的表。
+* `column_list` ：指出对哪些列进行索引，多列时各列之间用逗号分隔。
 
-  * `column_list` ：指出对哪些列进行索引，多列时各列之间用逗号分隔。
+* `LOCAL` ：局部索引。MySQL 模式中在创建索引时如果不显式指定 `GLOBAL` 或 `LOCAL` ，则默认是 `LOCAL` 。
 
-  * `LOCAL` ：局部索引。MySQL 模式中在创建索引时如果不显式指定 `GLOBAL` 或 `LOCAL` ，则默认是 `LOCAL` 。
+* `GLOBAL` ：全局索引。
 
-  * `GLOBAL` ：全局索引。
+* `PARTITION BY column_list PARTITIONS N` ：指定分区方式及类型。
 
-  * `PARTITION BY column_list PARTITIONS N` ：指定分区方式及类型。
+>**说明**
+>
+>索引名称在表范围内不能重复，查看索引可以通过命令 `SHOW INDEX`。
 
-  >**说明**
-  >
-  >索引名称在表范围内不能重复，查看索引可以通过命令 `SHOW INDEX`。
+新增索引还有一种方法，其 SQL 语法格式如下：
 
-* 新增索引还有一种方法，其 SQL 语法格式如下：
-
-  ```sql
-  ALTER TABLE  table_name  
-  ADD INDEX|KEY  index_name ( column_list ) ;
-  ```
+```sql
+ALTER TABLE  table_name  
+ADD INDEX|KEY  index_name ( column_list ) ;
+```
 
 该语句可以一次增加多个索引，索引关键字用 INDEX 或 KEY 都可以。
 
-## 示例
-
-为非分区表创建普通索引。
+示例：为非分区表创建普通索引。
 
 ```sql
 obclient> CREATE TABLE test (c1 int primary key, c2 VARCHAR(10));
@@ -65,7 +59,7 @@ obclient> SHOW INDEX FROM test;
 3 rows in set
 ```
 
-字段说明：
+字段解释如下：
 
 * `Seq_in_index` ：索引中的列序列号，一个是1一个是2，就是表明在联合索引中的顺序。
 
