--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/5.manage-views-2.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/5.manage-views-2.md
@@ -1,13 +1,11 @@
 # 管理视图
-
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/manage-views-2
 本节主要介绍如何创建、修改和删除视图。
 视图用来展示表的查询结果。大部分能使用表的地方，都可以使用视图。如果经常访问的数据分布在多个表里时，使用视图是最好的方法。
 
 ## 创建普通视图
 
 您可以使用 `CREATE VIEW` 语句来创建普通视图。创建后，可以对该视图执行 DML 语句。
-
-### 语法
 
 MySQL 模式下，创建视图的 SQL 语法如下：
 
@@ -19,7 +17,7 @@ column_name_list:
     column_name [, column_name ...]
 ```
 
-字段说明：
+其中：
 
 * `OR REPLACE`：表示如果要创建的视图名称已存在，则使用新的定义重新创建视图。
 
@@ -41,7 +39,7 @@ column_name_list:
 
   * 如果不使用 `WITH CHECK OPTION` 子句，则在创建视图时，系统不检查视图的 `WHERE` 子句，然后将检查递归到底层视图，并应用相同的规则。
 
-### 示例
+示例：
 
 ```sql
 obclient> CREATE  VIEW stock_item
@@ -57,7 +55,7 @@ Query OK, 0 rows affected
 
 您可以使用 `CREATE OR REPLACE VIEW` 语句来对普通视图进行修改。
 
-修改视图 `stock_item`。
+示例：修改视图 `stock_item`。
 
 ```sql
 obclient> CREATE OR REPLACE VIEW stock_item
@@ -77,8 +75,6 @@ Query OK, 0 rows affected (0.02 sec)
 
 删除视图时，需确保当前用户具备该视图的 `DROP` 权限。
 
-### 语法
-
 MySQL 模式下，删除视图的 SQL 语法如下：
 
 ```sql
@@ -89,15 +85,13 @@ view_name_list:
     view_name [, view_name_list]
 ```
 
-字段说明：
+其中：
 
 * 使用 `IF EXISTS` 关键字可以防止由于视图不存在而出错。
 
 * 如果 `view_name_list` 中包含一部分存在和一部分不存在的视图，执行可能报错但是存在的视图依然会被删除。
 
-### 示例
-
-删除视图 `V1`。
+示例：删除视图 `V1`。
 
 ```sql
 obclient> DROP VIEW V1;
