--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/7.manage-triggers-1/1.overview-33.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.mysql-4/7.manage-triggers-1/1.overview-33.md
@@ -1,5 +1,5 @@
 # 概述
-
+#docslug#/oceanbase-database/oceanbase-database/V4.0.0/overview-33
 OceanBase 数据库 MySQL 模式兼容 MySQL 5.6 的触发器。触发器是与表相关的数据库对象，并在表发生特定事件时被激活。
 
 触发器可以在语句插入、更新或删除关联表中的行时被激活。例如，您可以通过 `INSERT` 或 `LOAD DATA` 语句插入行，并且每插入一行就会激活一次 `INSERT` 触发器。如果批量插入两行数据，则会出发两次触发器。
