--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/6.expression-1/10.scalar-subquery-expression.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-oracle-mode/6.expression-1/10.scalar-subquery-expression.md
@@ -1,7 +1,7 @@
 标量子查询表达式 
 =============================
 #docslug#/oceanbase-database/oceanbase-database/V4.0.0/scalar-subquery-expression
-标量子查询表达式（Scalar Subquery Expression）是返回一行包含多列值的子查询。
+标量子查询表达式（Scalar Subquery Expression）是返回一行单列值的子查询。
 
 如果子查询返回 0 行，则标量子查询表达式的值是 NULL。如果子查询返回多行，则数据库返回一个错误。大多数表达式都可以使用标量子查询表达式作为参数。
 
