--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/1.basic-syntax-mysql.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/1.basic-syntax-mysql.md
@@ -16,7 +16,7 @@ END [end_label]
 
 其中，`statement_list` 表示一个或多个语句的列表，每个语句以分号（;）结尾。`statement_list` 是可选的，因此空复合语句 `BEGIN END` 是合法的。
 
-`BEGIN ... END` 块支持嵌套。`BEGIN ... END` 也可以被标记，详细信息请参考 [语句标签](#语句标签)。
+`BEGIN ... END` 块支持嵌套。`BEGIN ... END` 也可以被标记，详细信息请参考 **语句标签**。
 
 PL 存储程序的默认分隔符为"/"，用户也可以使用 `delimiter` 命令自定义分隔符，以使整个定义能够作为单个语句传递给服务器 。分隔符可以由单个字符或多个字符组成，应该避免使用反斜杠（\\）字符，它一般会被用作转义字符。示例如下：
 
@@ -33,7 +33,7 @@ DELIMITER //
 
 ## DECLARE 声明 
 
-`DECLARE` 语句用于定义程序的局部变量、异常处理和游标，详细信息请分别参见 [存储程序的变量](2.storage-object/2.variables-in-stored-programs.md)、[异常处理](9.pl-exception-handling-statement/1.exception-handling-statement.md)和[游标](3.cursor/1.overview-of-cursors.md)。
+`DECLARE` 语句用于定义程序的局部变量、异常处理和游标，详细信息请分别参见 [存储程序的变量](2.storage-object-mysql/2.variables-in-stored-programs-mysql.md)、[异常处理](9.pl-exception-handling-statement-mysql/1.exception-handling-statement-mysql.md)和[游标](3.cursor-mysql/1.overview-of-cursors-mysql.md)。
 
 `DECLARE` 仅允许在 `BEGIN ... END` 块内使用，并且必须在其开始的位置，即在其他语句的前面。
 
@@ -98,4 +98,4 @@ obclient> CREATE PROCEDURE doiterate()
 Query OK, 0 rows affected
 ```
 
-有关块内异常处理程序的声明，请参见 [DECLARE ... HANDLER](9.pl-exception-handling-statement/3.declare-handler.md)。
+有关块内异常处理程序的声明，请参见 [DECLARE ... HANDLER](9.pl-exception-handling-statement-mysql/3.declare-handler-mysql.md)。
