--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/1.create-function-mysql.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/1.create-function-mysql.md
@@ -87,4 +87,4 @@ routine_body:
 
   `character_set_database` 和 `collation_database` 系统变量可以用于指定数据库字符集和排序规则。
   
-有关创建函数的详细示例信息，请参见 [存储函数](../2.storage-object/4.pl-storage-function.md)。
+有关创建函数的详细示例信息，请参见 [存储函数](../2.storage-object-mysql/4.pl-storage-function-mysql.md)。
