--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/2.create-procedure-mysql.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/2.create-procedure-mysql.md
@@ -30,7 +30,7 @@ routine_body:
 
 默认情况下，存储过程与默认数据库相关联。要将存储过程与指定数据库的相关联，请使用 `database_name.sp_name` 指定名称。
 
-要调用存储过程，请使用 `CALL` 语句，详细信息请参见 [CALL](../5.pl-manipulation-statement/1.CALL.md)。
+要调用存储过程，请使用 `CALL` 语句，详细信息请参见 [CALL](../5.pl-manipulation-statement-mysql/1.CALL-mysql.md)。
 
 `CREATE PROCEDURE` 语句的使用需要 `CREATE PROCEDURE` 权限。默认情况下，OceanBase 数据库自动将 `ALTER ROUTINE` 和 `EXECUTE` 权限授予例程（存储过程和函数）创建者。如果存在 `DEFINER` 子句，则所需的权限取决于 `user` 的值。
 
@@ -102,4 +102,4 @@ END;
 
   `character_set_database` 和 `collation_database` 系统变量可以用于指定数据库字符集和排序规则。
 
-有关创建存储过程的详细示例信息，请参见 [存储过程](../2.storage-object/3.pl-stored-procedure.md)。
+有关创建存储过程的详细示例信息，请参见 [存储过程](../2.storage-object-mysql/3.pl-stored-procedure-mysql.md)。
