--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/3.create-trigger-mysql.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/3.create-trigger-mysql.md
@@ -69,4 +69,4 @@ trigger_event: { INSERT | UPDATE | DELETE }
 
 在触发器主体中，通过 `CURRENT_USER()` 函数返回用于在触发器激活时检查权限的账号属于 `DEFINER` 用户，而不是其操作导致触发器被激活的用户。
 
-有关创建触发器的详细示例信息，请参见 [触发器](../2.storage-object/5.pl-trigger.md)。
+有关创建触发器的详细示例信息，请参见 [触发器](../2.storage-object-mysql/5.pl-trigger-mysql.md)。
