--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/4.get-diagnostics-mysql.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/4.get-diagnostics-mysql.md
@@ -95,7 +95,7 @@ Condition area list:
 ```
 
 
-有关诊断区域的介绍，请参见 [诊断区](../9.pl-exception-handling-statement/8.diagnostic-area.md)。
+有关诊断区域的介绍，请参见 [诊断区](../9.pl-exception-handling-statement-mysql/8.diagnostic-area-mysql.md)。
 
 `GET DIAGNOSTICS` 可以获取语句或条件信息，但不能在同一语句中获取两种信息：
 
@@ -134,7 +134,7 @@ obclient> SELECT @c5, @c6;
 
 `GET [CURRENT] DIAGNOSTICS` 和 `GET STACKED DIAGNOSTICS` 可以在处理程序中用于访问当前和堆栈的诊断区域的内容。最初，两个诊断区域返回相同的结果，因此只要您在处理程序中不执行任何更改其当前诊断区域的语句，就可以从当前诊断区域获取处理程序的激活条件的有关信息。
 
-但是，在处理程序中执行的语句可以修改当前诊断区域，根据常用规则来清除和设置其内容。这种情况下，获取有关处理程序激活条件的信息的一种更可靠的方法是使用堆栈诊断区域，该区域不能被处理程序中执行的语句修改，除了 `RESIGNAL`。有关何时设置和清除当前诊断区域的信息，请参见 [诊断区](../9.pl-exception-handling-statement/8.diagnostic-area.md)。
+但是，在处理程序中执行的语句可以修改当前诊断区域，根据常用规则来清除和设置其内容。这种情况下，获取有关处理程序激活条件的信息的一种更可靠的方法是使用堆栈诊断区域，该区域不能被处理程序中执行的语句修改，除了 `RESIGNAL`。有关何时设置和清除当前诊断区域的信息，请参见 [诊断区](../9.pl-exception-handling-statement-mysql/8.diagnostic-area-mysql.md)。
 
 如下示例中，在当前诊断区域已被处理程序语句修改之后，可以再处理程序中使用 `GET STACKED DIAGNOSTICS` 来获取有关已处理异常的信息。
 
