--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/8.trigger-oracle/4.disable-and-enable-a-trigger-oracle.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/8.trigger-oracle/4.disable-and-enable-a-trigger-oracle.md
@@ -44,4 +44,4 @@ ALTER TRIGGER trigger_name ENABLE;
 
 
 
-查看定义的触发器请参见 [查看触发器信息](../9.trigger/5.view-trigger-information.md)。
+查看定义的触发器请参见 [查看触发器信息](5.view-trigger-information-oracle.md)。
