--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/4.pl-system-package/26.UTL_RAW/1.utl_raw-overview.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/4.pl-system-package/26.UTL_RAW/1.utl_raw-overview.md
@@ -33,14 +33,14 @@
 | [CAST_TO_BINARY_FLOAT](11.CAST_TO_BINARY_FLOAT.md)      | 将以 `RAW` 二进制形式表示的 `BINARY_FLOAT` 值转换为 `BINARY_FLOAT`。    |
 | [CAST_TO_BINARY_INTEGER](12.CAST_TO_BINARY_INTEGER.md)  | 将以 `RAW` 二进制形式表示的 `BINARY_INTEGER` 值转换为 `BINARY_INTEGER`。|
 | [CAST_TO_NUMBER](13.CAST_TO_NUMBER.md)        | 将以 `RAW` 二进制形式表示的 `NUMBER` 值转换为 `NUMBER`。  |
-| [CAST_TO_RAW](../21.UTL_RAW/6.CAST_TO_RAW.md)           | 将 `VARCHAR2` 值转换为 `RAW` 值。              |
-| [CAST_TO_VARCHAR2](../21.UTL_RAW/7.CAST_TO_VARCHAR2.md) | 将 `RAW` 值转换为 `VARCHAR2` 值。              |
-| [COPIES](../26.UTL_RAW/18.COPIES.md)           | 返回串联在一起的 `r` 的 `n` 个副本。                      |
-| [COMPARE](../21.UTL_RAW/9.COMPARE.md)         | 比较 `RAW r1` 和 `RAW r2`。                             |
-| [CONCAT](../21.UTL_RAW/10.CONCAT-utl.md)        | 将最多 12 个 `RAW` 串连到一个 `RAW` 中。                  |
-| [LENGTH](../21.UTL_RAW/11.LENGTH-utl.md)        | 返回 `RAW r` 的字节长度。                                |
-| [REVERSE](../21.UTL_RAW/12.REVERSE.md)        | 从端到端反转 `RAW r` 中的字节序列。                       |
-| [SUBSTR](../21.UTL_RAW/13.SUBSTR-utl.md)    | 返回 `len` 字节数，从 `RAW r` 的 `pos` 位开始计算。       |
+| [CAST_TO_RAW](6.CAST_TO_RAW.md)           | 将 `VARCHAR2` 值转换为 `RAW` 值。              |
+| [CAST_TO_VARCHAR2](7.CAST_TO_VARCHAR2.md) | 将 `RAW` 值转换为 `VARCHAR2` 值。              |
+| [COPIES](18.COPIES.md)           | 返回串联在一起的 `r` 的 `n` 个副本。                      |
+| [COMPARE](9.COMPARE.md)         | 比较 `RAW r1` 和 `RAW r2`。                             |
+| [CONCAT](10.CONCAT-utl.md)        | 将最多 12 个 `RAW` 串连到一个 `RAW` 中。                  |
+| [LENGTH](11.LENGTH-utl.md)        | 返回 `RAW r` 的字节长度。                                |
+| [REVERSE](12.REVERSE.md)        | 从端到端反转 `RAW r` 中的字节序列。                       |
+| [SUBSTR](13.SUBSTR-utl.md)    | 返回 `len` 字节数，从 `RAW r` 的 `pos` 位开始计算。       |
 
 
 
