--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/4.pl-system-package/8.DBMS_LOB/7.ERAESE.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/4.pl-system-package/8.DBMS_LOB/7.ERAESE.md
@@ -51,7 +51,7 @@ offset            IN                INTEGER := 1);
 
 >**注意**
 >
->只擦除 `LOB` 的部分数据时，`LOB` 的长度不会减小。要减小 `LOB` 值的长度，请参见 [TRIM](../8.DBMS_LOB/15.TRIM-1.md)。
+>只擦除 `LOB` 的部分数据时，`LOB` 的长度不会减小。要减小 `LOB` 值的长度，请参见 [TRIM](15.TRIM.md)。
 
 异常情况 
 -------------------------
