--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/1.exception-handling-statement-mysql.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/2.pl-mysql/9.pl-exception-handling-statement-mysql/1.exception-handling-statement-mysql.md
@@ -4,17 +4,17 @@
 
 OceanBase 数据库支持如下 PL 异常处理语句：
 
-* `DECLARE ... CONDITION` 语句用于命名异常条件。详细信息请参见 [DECLARE ... CONDITION](../9.pl-exception-handling-statement/2.declare-condition.md)。
+* `DECLARE ... CONDITION` 语句用于命名异常条件。详细信息请参见 [DECLARE ... CONDITION](../9.pl-exception-handling-statement-mysql/2.declare-condition-mysql.md)。
 
-* `DECLARE ... HANDLER` 语句用于声明处理程序。详细信息请参见 [DECLARE ... HANDLER](../9.pl-exception-handling-statement/3.declare-handler.md)。 
+* `DECLARE ... HANDLER` 语句用于声明处理程序。详细信息请参见 [DECLARE ... HANDLER](../9.pl-exception-handling-statement-mysql/3.declare-handler-mysql.md)。 
 
-* `SIGNAL` 语句用于引发异常条件。详细信息请参见 [SIGNAL](../9.pl-exception-handling-statement/6.SIGNAL.md)。 
+* `SIGNAL` 语句用于引发异常条件。详细信息请参见 [SIGNAL](../9.pl-exception-handling-statement-mysql/6.SIGNAL-mysql.md)。 
 
-* `RESIGNAL` 语句用于修改异常处理程序中的异常信息。详细信息请参见 [RESIGNAL](../9.pl-exception-handling-statement/5.RESIGNAL.md)。
+* `RESIGNAL` 语句用于修改异常处理程序中的异常信息。详细信息请参见 [RESIGNAL](../9.pl-exception-handling-statement-mysql/5.RESIGNAL-mysql.md)。
 
-* `GET DIAGNOSTICS` 语句用于从诊断区域检索信息。详细信息请参见 [GET DIAGNOSTICS](../9.pl-exception-handling-statement/4.get-diagnostics.md)。
+* `GET DIAGNOSTICS` 语句用于从诊断区域检索信息。详细信息请参见 [GET DIAGNOSTICS](../9.pl-exception-handling-statement-mysql/4.get-diagnostics-mysql.md)。
 
 
-当发生异常状况时，服务器如何选择处理程序的信息。请参见 [处理程序的有效范围](../9.pl-exception-handling-statement/7.scope-rules-for-handlers.md)。
+当发生异常状况时，服务器如何选择处理程序的信息。请参见 [处理程序的有效范围](../9.pl-exception-handling-statement-mysql/7.scope-rules-for-handlers-mysql.md)。
 
-有关诊断区域的信息，请参见 [诊断区](../9.pl-exception-handling-statement/8.diagnostic-area.md)。
+有关诊断区域的信息，请参见 [诊断区](../9.pl-exception-handling-statement-mysql/8.diagnostic-area-mysql.md)。
