--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/6.dynamic-sql-oracle/3.dbms_sql-package-oracle.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/3.pl-oracle/6.dynamic-sql-oracle/3.dbms_sql-package-oracle.md
@@ -37,5 +37,5 @@ DBMS_SQL 系统包
 
 
 
-关于 `DBMS_SQL` 系统包的详细信息请参考 [DBMS_SQL](../13.pl-system-package/16.DBMS_SQL/1.dbms_sql-overview-1.md)。
+关于 `DBMS_SQL` 系统包的详细信息请参考 [DBMS_SQL](../../4.pl-system-package/17.DBMS_SQL/1.dbms_sql-overview.md)。
 
