--- a/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/4.pl-system-package/8.DBMS_LOB/1.dbms_lob-overview.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/3.pl-reference/4.pl-system-package/8.DBMS_LOB/1.dbms_lob-overview.md
@@ -62,7 +62,7 @@ DBMS_LOB 子程序概览
 |----------------------------------------------------------------|------------------------------------------|
 | [APPEND](../8.DBMS_LOB/2.APPEND.md)          | 将源 `LOB` 的内容附加到目标 `LOB`。                 |
 | [CLOSE](../8.DBMS_LOB/3.CLOSE.md)           | 关闭先前打开的内部或外部 `LOB`。                      |
-| [COPY](../8.DBMS_LOB/5.Copy.md)            | 将源内部 `LOB` 的全部或一部分复制到目标内部 `LOB`。         |
+| [COPY](../8.DBMS_LOB/5.COPY.md)            | 将源内部 `LOB` 的全部或一部分复制到目标内部 `LOB`。         |
 | [CREATETEMPORARY](../8.DBMS_LOB/6.CREATETEMPORARY.md) | 在默认的临时表空间中创建一个临时 `BLOB` 或 `CLOB` 及对应的索引。 |
 | [FREETEMPORARY](../8.DBMS_LOB/8.FREETEMPORARY.md)   | 释放默认的临时表空间中的临时 `BLOB` 或 `CLOB`。          |
 | [ERASE](../8.DBMS_LOB/7.ERAESE.md)           | 擦除全部或部分 `LOB`。                           |
