运维管理验证合入

--- a/zh-CN/7.reference/2.administrator-guide/7.o-m-management/4.monitoring-and-alerting/2.monitoring-1/3.sql-monitoring-1.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.o-m-management/4.monitoring-and-alerting/2.monitoring-1/3.sql-monitoring-1.md
@@ -1,7 +1,10 @@
 # SQL 监控
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/sql-monitoring-1
 
 OCP 上的 SQL 监控服务主要包括可疑 SQL、TopSQL、 SlowSQL 和 ParallelSQL 几部分。
+
+>功能适用性
+>
+>目前社区版 OCP 暂不支持可疑 SQL、 ParallelSQL诊断功能。
 
 ## 背景信息
 
@@ -286,7 +289,7 @@ update ob_agent_collection_config_history set collect_elapsed_threshold_us = 100
 3. 单击 **ParallelSQL** 页签。
 
 4. 对 ParallelSQL 进行筛选。
-   
+
    1. 配置筛选条件。
 
       * 时间范围：可在 **时间范围** 下拉框中选择 近 5 分钟、近 10 分钟、近 20 分钟、近 30 分钟、近 1 小时、近 3小时来快速选择时间范围；也可在下拉框中选择自定义时间，并配置开始时间和结束时间。默认显示近 30 分钟内的信息。
@@ -326,7 +329,7 @@ update ob_agent_collection_config_history set collect_elapsed_threshold_us = 100
       4. 在 **执行计划** 页签，查看该 SQL 的执行计划，或为其绑定执行计划。
 
       5. 在 **索引** 页签，查看该 SQL 绑定的索引。
-    
+
       6. 在 **SQL 限流** 页签，查看该 SQL 的限流情况，或为其设置限流。
 
       7. 在 **执行计划** 、 **索引** 、 **SQL 限流** 页签，均可查看该 SQL 的绑定记录。
@@ -334,4 +337,3 @@ update ob_agent_collection_config_history set collect_elapsed_threshold_us = 100
          在绑定记录中您可查看到已绑定计划的状态，可通过 **取消绑定** 按钮将 SQL 与该计划解绑，也可通过 **绑定** 按钮将二者再次绑定。
 
          ![绑定计划](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8291489461/p429721.png)
-
