--- a/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/3.check-cluster-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/3.check-cluster-parameters.md
@@ -1,43 +1,28 @@
-检查集群参数 
-===========================
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/check-cluster-parameters
+# 检查集群参数
+
 您也可以通过 OCP 来进行参数的统一管理，包括查看参数、修改参数以及查看参数修改历史等操作。
 
-通过 OCP 查看 
-------------------------------
+## 通过 OCP 查看
 
-**说明**
-
-
-
-不同 OCP 版本的操作界面可能不同，本节以 OCP V3.1.0 版本为例提供操作指导，OCP 其他版本的操作请参考对应版本的《 OCP 用户指南》文档。
+>**说明**
+>
+>不同 OCP 版本的操作界面可能不同，本节以 OCP V3.1.0 版本为例提供操作指导，OCP 其他版本的操作请参考对应版本的《 OCP 用户指南》文档。
 
 1. 登录 OCP 。默认进入 **集群概览** 页面。
 
-   
-
 2. 在 **集群概览** 页面的 **集群列表** 区域，选择待操作的集群并单击其集群名。
 
-   
-
 3. 在显示的页面的左侧导航栏上，单击 **参数管理** 。
-
-   
 
 4. 在 **参数列表** 页面，可以查看当前集群所有参数的信息，包括各参数的参数名称、取值类型、取值范围、默认值、当前值、参数说明和是否重启生效等信息。
 
    ![para](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5835672461/p348522.png)
-   
 
-
-
-
-设置集群参数 
----------------------------
+### 设置集群参数
 
 可通过 SQL 语句或 OCP 修改集群参数。
 
-### 通过 SQL 语句修改集群参数 
+### 通过 SQL 语句修改集群参数
 
 集群参数即配置项，修改配置项的语法如下所示，同时修改多个系统配置项时，请用逗号（,）分隔。
 
@@ -50,25 +35,15 @@ PARAM_OPTS:
 [ZONE='zone' | SERVER='server_ip:rpc_port']
 ```
 
-
-
 参数修改语句说明如下：
 
 * `PARAM_OPTS` 修改配置项时所指定的其它限定条件，例如，指定 Zone、指定 Server 等。
 
-  
-
 * `ALTER SYSTEM` 语句不能同时指定 Zone 和 Server。并且在指定 Zone 时，仅支持指定一个 Zone；指定 Server 时，仅支持指定一个 Server。
-
-  
 
 * 集群级别的配置项（`Scope`) 不能通过普通租户设置，也不可以通过 sys 租户指定普通租户来设置。例如，`ALTER SYSTEM SET memory_limit='100G' TENANT='test_tenant'` 将导致报错，因为 `memory_limit` 是集群级别（`Scope`）的配置项。
 
-
-集群参数检查项 
-----------------------------
-
-
+### 集群参数检查项
 
 |               参数项                |                                                       参数说明                                                       |   参数建议值    |
 |----------------------------------|------------------------------------------------------------------------------------------------------------------|------------|
