--- a/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/7.check-observer-status.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/7.check-observer-status.md
@@ -1,14 +1,12 @@
-检查 OBServer 状态 
+检查 OBServer 状态
 ===================================
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/check-observer-status
+
 本文介绍了三种检查 OBServer 状态的方式，您可根据自身情况选择。
 
-通过宿主机查看 OBServer 状态 
+通过宿主机查看 OBServer 状态
 ----------------------------------------
 
 1. 登录 OBServer 所在的宿主机。
-
-   
 
 2. 在命令行工具中运行以下命令查看 observer 进程。
 
@@ -18,12 +16,7 @@
    root      20514  19521  0 16:09 pts/25   00:00:00 grep --color=auto observer
    ```
 
-   
-
-
-
-
-通过视图查看 OBServer 状态 
+通过视图查看 OBServer 状态
 ---------------------------------------
 
 ```sql
@@ -39,18 +32,16 @@ obclient> SELECT status FROM oceanbase.DBA_OB_SERVERS;
 
 * 如果返回结果为 `active`，说明 OBServer 处于正常运行状态。
 
-
 * 如果返回结果为 `inactive`，说明 OBServer 处于下线状态。
 
 * 如果返回结果为 `deleting`，说明 OBServer 处于正在被删除状态。
 
-
-通过 OCP 查看通过视图查看 
+通过 OCP 查看
 ------------------------------------
 
->**说明**
+>**功能适用性**
 >
->不同 OCP 版本的操作界面可能不同，本节以 OCP V3.1.1 版本为例提供操作指导，OCP 其它版本的操作请参考对应版本的《OCP 用户指南》文档。
+>目前社区版 OCP 暂不支持健康巡检功能。
 
 1. 登录 OCP，默认进入 **集群概览** 页面。
 
@@ -58,10 +49,11 @@ obclient> SELECT status FROM oceanbase.DBA_OB_SERVERS;
 
 3. 在显示页面的左侧导航栏上，单击 **健康巡检** 。
 
-4. 在 **健康巡检** \> **巡检结果列表** 中，查看 OBServer 状态。![2日常巡检-健康巡检](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5849290461/p310492.png)
+4. 在 **健康巡检** \> **巡检结果列表** 中，查看 OBServer 状态。
+
+![2日常巡检-健康巡检](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5849290461/p310492.png)
 
    配置功能项如下表所示：
-   
 
    | **参数** |                            **说明**                            |
    |--------|--------------------------------------------------------------|
@@ -71,18 +63,10 @@ obclient> SELECT status FROM oceanbase.DBA_OB_SERVERS;
    | 巡检结果描述 | 对主机、集群、OBProxy、zone、OBServer 等情况进行描述。                        |
    | 巡检时间   | 显示巡检发起时的时间，例如 2020 年 11 月 27 日 17:04:00。                     |
 
-   
-
    根据 **巡检指标** 可查看 OBServer 指标的健康状态。相关详情如下所示：
-   
 
    |          **指标组**          |                              **指标项**                               |                                          **结果描述**                                          |
    |---------------------------|--------------------------------------------------------------------|--------------------------------------------------------------------------------------------|
    | server_status             | operation status: 运维状态 status：运维状态                                 | OBServer：192.168.1.1 运维状态：停止中，警告                                           |
    | ob_server_disk_status     | disk_in_bytes_used：磁盘字节已使用 disk_used_percent：资盘使用率 | OBServer：192.168.1.1 磁盘已使用：2 GB 磁盘使用率：85%, 大于72%，严重/70%，健康 |
    | ob_server_partition_count | partition_count：分区副本总数                                             | OBServer：192.168.1.1 分区副本数：30010, 大于300x00，严重/20010, 健康                    |
-
-   
-
-
-
