--- a/zh-CN/7.reference/2.administrator-guide/7.o-m-management/6.performance-diagnosis/1.cluster-performance-diagnosis.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.o-m-management/6.performance-diagnosis/1.cluster-performance-diagnosis.md
@@ -1,30 +1,22 @@
-集群性能诊断 
-===========================
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/cluster-performance-diagnosis
+# 集群性能诊断
+
 本文介绍了如何对 OceanBase 集群性能监控和性能诊断。
 
-集群性能监控 
----------------------------
+## 集群性能监控
 
-### 操作步骤 
+### 操作步骤
 
 1. 登录 OCP，在左侧导航栏，单击 **集群** 。
 
-
 2. 在 **集群** 页面的 **集群列表** 区域，选择待操作的集群并单击其集群名。
-
 
 3. 在显示的页面的左侧导航栏上，单击 **性能监控** 。
 
-
 4. 打开实时性能开关，可看到性能的实时变化。
-
-
 
 ![集群性能监控](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1329721461/p347138.png)
 
 监控数据筛选说明如下。
-
 
 |   筛选对象   |                                           说明                                            |
 |----------|-----------------------------------------------------------------------------------------|
@@ -33,36 +25,31 @@
 | Zone     | OceanBase 是分布式数据库，集群监控由多个Zone 采集汇总而成。汇总方式由指标类型决定。选择单个 Zone，展示对应 Zone 的监控数据。             |
 | OBServer | OceanBase 是分布式数据库，集群监控由多个OBServer 采集汇总而成。汇总方式由指标类型决定。选择单个 OBServer，展示对应 OBServer 的监控数据。 |
 
-
 性能指标分数据库性能和主机性能，更多性能指标详情，请参见 [监控指标](https://www.oceanbase.com/docs/oceanbase-cloud-platform/oceanbase-cloud-platform/V3.1.2/pmt1bh)。
 
-集群性能报告 
----------------------------
+## 集群性能报告
 
-### 操作步骤 
+>**功能适用性**
+>
+>目前社区版 OCP 暂不支持生成性能报告。
+
+### 操作步骤
 
 1. 登录 OCP，在左侧导航栏，单击 **集群** 。
 
-
 2. 在 **集群** 页面的 **集群列表** 区域，选择待操作的集群并单击其集群名。
 
-
 3. 在显示的页面的左侧导航栏上，单击 **性能报告** 。
-
 
 4. 单击 **生成性能报告** ，选择开始和结束快照点，生成集群进行报告。
 
 5. 单击 **查看** ，完成对性能报告的查看，系统保留近 90 天的报告。
 
-
 6. 单击 **下载** ，完成对性能报告的下载。
-
-
 
 ![集群性能报告](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1329721461/p347156.png)
 
 性能报告包含内容如下所示。
-
 
 |  模块  |                 说明                  |
 |------|-------------------------------------|
@@ -70,4 +57,3 @@
 | 工作负载 | 集群工作负载信息。                           |
 | SQL  | 按照响应时间、等待事件、CPU 等指标进行汇总的 TopSQL 信息。 |
 | 锁    | 包括行锁请求、等待、超时等信息。                    |
-
