--- a/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/1.routine-inspection-overview.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/1.routine-inspection-overview.md
@@ -1,7 +1,6 @@
 日常巡检概述
 ===========================
 
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/routine-inspection-overview
 本章主要介绍日常对 OceanBase 集群进行巡检应该检查的事项，包含 OceanBase 集群的核心指标，范围涉及性能、可用性、资源水位和数据备份。为了及时发现和修复 OceanBase 的隐患，建议您重点关注 OceanBase 的日常巡检结果。
 
 概述
@@ -37,11 +36,10 @@
 
   OceanBase 数据库支持对主机 NTP 偏移量的检查，OceanBase 集群主机节点的 NTP 偏移量如果相差太大，可能会导致选主异常。
   
-  
 * [检查 OBProxy 连接状态](../5.daily-inspection/10.obproxy-connection-status.md)
 
   OceanBase 数据库支持对 OBProxy 连接状态的检查。客户端通过 OBProxy 访问 OceanBase 集群，如果 OBProxy 连接异常，会导致客户端请求集群异常。
   
-**注意**
-
-本章所有章节中列出来的检查项仅为需要重点关注的检查项，并非全部巡检项。
+>**注意**
+>
+>本章所有章节中列出来的检查项仅为需要重点关注的检查项，并非全部巡检项。
