--- a/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/10.obproxy-connection-status.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/10.obproxy-connection-status.md
@@ -1,11 +1,12 @@
-检查 OBProxy 连接状态
-====================================
+# 检查 OBProxy 连接状态
 
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/obproxy-connection-status
 应用程序通过 OBProxy 向 OBServer 发起请求，OBProxy 将请求准确的路由到数据副本所在的 OBServer 上。因为 OBProxy 的连接数是有上限的，所以除了检查 OBProxy 的状态，还需要检查对应连接数，并做好扩容准备。
 
-通过 OCP 查看
-------------------------------
+## 通过 OCP 查看
+
+>**功能适用性**
+>
+>目前社区版 OCP 暂不支持健康巡检功能。
 
 1. 登录 OCP，默认进入 **集群概览** 页面。
 
@@ -18,4 +19,4 @@
 |     巡检项     |                                                                                                                        巡检子项                                                                                                                         |                                                                                                                   结果示例                                                                                                                    |
 |-------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | OBProxy 状态  | status：运行状态                                                                                                                                                                                                                                         | *OBProxy: 10.0.0.0 状态：不可用(UNAVAILABLE)，不通过    <!-- -->* OBProxy: 10.0.0.0 状态：重启中(RESTARTING)，不通过    |
-| OBProxy 连接数 | * `session_count from client`OBProxy 和客户端之间的连接数    <!-- --> * `max connection count for a single obproxy` 单个 OBProxy 的最大连接数    | *OBProxy：10.0.0.0 客户端连接数：8000，不通过    <!-- -->* OBProxy: 10.0.0.0 总连接数：58000，不通过                     |
+| OBProxy 连接数 | *`session_count from client`OBProxy 和客户端之间的连接数    <!-- -->* `max connection count for a single obproxy` 单个 OBProxy 的最大连接数    | *OBProxy：10.0.0.0 客户端连接数：8000，不通过    <!-- -->* OBProxy: 10.0.0.0 总连接数：58000，不通过                     |
