--- a/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/11.check-lock.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/11.check-lock.md
@@ -1,4 +1,9 @@
 # 死锁检测
+
+>**功能适用性**
+>
+>目前社区版 OCP 暂不支持死锁检测功能。
+
 OceanBase 支持分布式死锁自动检测功能。在打开集群分布式死锁自动检测功能开关的情况下，OceanBase 能够自动发现死锁并解决死锁问题。用户需要针对 SQL 抛出的异常信息，决定提交还是回滚事务。
 
 分布式死锁自动检测功能相比通过事务超时时间来处理死锁的优势如下：
