--- a/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/4.check-host-status.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.o-m-management/5.daily-inspection/4.check-host-status.md
@@ -1,47 +1,34 @@
-检查主机状态 
-===========================
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/check-host-status
+# 检查主机状态
 
+## 通过 OCP 查看
 
-检查主机状态 
----------------------------
-
-### 通过 OCP 查看 
-
-#### 方式一 
+### 方式一
 
 1. 登录 OCP，默认进入 **集群概览** 页面。
-
-   
 
 2. 在显示页面的左侧导航栏上，单击 **主机** 。
 
-   
+3. 在主机页面，单击要查看的主机 IP 地址，进入主机详情页面。
 
-3. 在主机页面，单击要查看的主机 IP 地址，进入主机详情页面。![host1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6835672461/p374118.png)
+![host1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6835672461/p374118.png)
 
-   
+### 方式二
 
-
-
-
-#### 方式二 
+>功能适用性
+>
+>目前社区版 OCP 暂不支持健康巡检功能。
 
 1. 登录 OCP，默认进入 **集群概览** 页面。
 
-   
-
 2. 在 **集群概览** 页面的 **集群列表** 区域，选择待操作的集群并单击其集群名。
-
-   
 
 3. 在显示页面的左侧导航栏上，点击 **健康巡检** 。
 
-   
+4. 在 **健康巡检** \> **巡检结果列表** 中，查看主机状态。
 
-4. 在 **健康巡检** \> **巡检结果列表** 中，查看主机状态。![２－３健康巡检](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8441779261/p303495.png)配置功能项如下表所示：
+![２－３健康巡检](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8441779261/p303495.png)
 
-   
+配置功能项如下表所示：
 
    | **参数** |                          **说明**                           |
    |--------|-----------------------------------------------------------|
@@ -51,10 +38,7 @@
    | 巡检结果描述 | 对主机、集群、OBProxy、zone、OBServer 等情况进行描述。                     |
    | 巡检时间   | 显示巡检发起时的时间，例如 2020 年 11 月 27日 17:04:00。                   |
 
-   
-
    据 **巡检指标** 可查看主机指标的健康状态。相关详情如下所示。
-   
 
    | 指标项  |                **巡检指标**                 |                                       **子指标项**                                        |                                                 **巡检结果示例**                                                  |
    |------|-----------------------------------------|---------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------|
@@ -62,9 +46,3 @@
    | 主机指标 | host_disk_status 主机磁盘状态 | host_disk_used_percent：磁盘分区已使用百分比 host_disk_used：磁盘分区已使用量             | 主机：192.168.1.1 /dev/sta，已使用大小 2.5 T， 使用百分比 90% \> 85%, 严重                                   |
    | 主机指标 | 主机负载                                    | load15_per_cpu：主机 15 分钟内平均每个 CPU 的负载                                                  | 主机：192.168.1.1 平均 CPU 负载：3, 大于2，不通过                                                         |
    | 主机指标 | 主机时间                                    | NTP_timediff：主机和NTP 服务器直接的时间差 SSH_interval：OCP Server 和主机级之间的SSH 请求耗时 | 主机：192.168.1.1 TP_timediff: 600ms \> 500ms,不通过； SSH_interval: 50s \> 1s,不通过 |
-
-   
-
-
-
-
