--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-1/1.partition-overview-6.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-1/1.partition-overview-6.md
@@ -1,5 +1,5 @@
 # 分区概述
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/partition-overview-6
+
 本节主要介绍 OceanBase 数据库的分区介绍和分区类型。
 
 ## 分区介绍
@@ -109,6 +109,10 @@ Key 分区有如下特点：
 
 对于 List 和 Range 分区，因为在创建表的过程中就指定了分区的名字，所以名字就是当时指定的名字。
 
-对于 Hash/Key 分区，创建时如果没有指定分区的名字，分区的命名由系统根据命名规则完成。具体表现，每个分区分别命名为 p0、p1、...、pn。
+对于 Hash/Key 分区，创建时如果没有指定分区的名字，分区的命名由系统根据命名规则完成。具体表现为：
+
+* 当 Hash/Key 分区为一级分区时，则每个分区分别命名为 p0、p1、...、pn。
+
+* 当 Hash/Key 分区为二级分区时，则每个分区分别命名为 sp0、sp1、 ...、spn。
 
 对于模板化二级分区表，定义二级分区后，系统根据二级分区的命名规则完成，其二级分区的命名规则为 `($part_name)s($subpart_name)`。对于非模板化二级分区表，二级分区的分区名即为⾃定义的分区名。
