--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/1.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/1.restart-a-node.md
@@ -2,9 +2,11 @@
 
 重启节点是通过一系列操作将节点停止后再重新启动的一个过程。
 
-## 操作前须知
+## 注意事项
 
-为了避免影响正在运行的业务，重启节点推荐按照以下操作顺序来执行：
+为减少重启节点对业务产生的影响，建议您在夜间业务量少的时间段进行重启。
+
+此外，为了避免影响正在运行的业务，重启节点推荐按照以下操作顺序来执行：
 
 1. 停止节点服务。
 
@@ -31,14 +33,14 @@
 2. 执行以下命令，停止节点服务。
 
    ```sql
-   obclient [none]> ALTER SYSTEM STOP SERVER 'SVR_IP:SVR_PORT';
+   obclient [none]> ALTER SYSTEM STOP SERVER 'ip:port';
    ```
 
-   其中：
+   相关参数说明如下：
 
-   * `SVR_IP`：表示待停止的节点所在的主机 IP。
+   * `ip`：表示待停止的节点所在的主机 IP。
 
-   * `SVR_PORT`：表示待停止的节点主机的 RPC 端口。
+   * `port`：表示待停止的节点主机的 RPC 端口。
 
    示例如下：
 
@@ -51,14 +53,14 @@
 3. 执行以下命令，对待重启的节点进行转储操作。
 
    ```sql
-   obclient [none]> ALTER SYSTEM MINOR FREEZE SERVER = ('SVR_IP:SVR_PORT');
+   obclient [none]> ALTER SYSTEM MINOR FREEZE SERVER = ('ip:port');
    ```
 
-   其中：
+   相关参数说明如下：
 
-   * `SVR_IP`：表示待重启的节点所在的主机 IP。
+   * `ip`：表示待重启的节点所在的主机 IP。
 
-   * `SVR_PORT`：表示待重启的节点主机的 RPC 端口。
+   * `port`：表示待重启的节点主机的 RPC 端口。
 
    示例如下：
 
@@ -144,14 +146,14 @@
 6. 执行以下命令，启动节点服务。
 
    ```sql
-   obclient [none]> ALTER SYSTEM START SERVER 'SVR_IP:SVR_PORT';
+   obclient [none]> ALTER SYSTEM START SERVER 'ip:port';
    ```
 
    其中：
 
-   * `SVR_IP`：表示待停止的节点所在的主机 IP。
+   * `ip`：表示待停止的节点所在的主机 IP。
 
-   * `SVR_PORT`：表示待停止的节点主机的 RPC 端口。
+   * `port`：表示待停止的节点主机的 RPC 端口。
 
    示例如下：
 
