--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/2.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/2.add-a-node.md
@@ -84,7 +84,7 @@
 
 ## 增加节点
 
-本示例中以向 Zone4 中添加 3 台 OBServer 为例提供操作指导。
+本示例中以向 `Zone4` 中添加 3 台 OBServer 为例提供操作指导。
 
 1. 启动 OBServer。
 
@@ -94,8 +94,8 @@
 
       语句如下：
 
-      ```sql
-      [admin@xxx oceanbase]$ /home/admin/oceanbase/bin/observer -i eth0 -P xxxx -p xxxx -z zone_name -d /home/admin/oceanbase/store/cluster_name -r 'SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT' -c cluster_id -n cluster_name -o "memory_limit_percentage=90,memstore_limit_percentage=60,datafile_disk_percentage=80,config_additional_dir=/data/1/cluster_name/etc3;/data/log1/cluster_name/etc2"
+      ```shell
+      [admin@xxx oceanbase]$ /home/admin/oceanbase/bin/observer -i eth0 -P xxxx -p xxxx -z $zone_name -d /home/admin/oceanbase/store/$cluster_name -r 'SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT' -c cluster_id -n $cluster_name -o "memory_limit_percentage=90,memstore_limit_percentage=60,datafile_disk_percentage=80,config_additional_dir=/data/1/cluster_name/etc3;/data/log1/cluster_name/etc2"
       ```
 
       相关参数说明如下：
@@ -115,8 +115,8 @@
 
       示例如下：
 
-      ```sql
-      obclient> /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone4 -d /home/admin/oceanbase/store/obdemo -r 'xx.xx.xx.10:2882:2881;xx.xx.xx.11:2882:2881;xx.xx.xx.12:2882:2881' -c 20190716 -n obdemo -o "memory_limit_percentage=90,memstore_limit_percentage=60,datafile_disk_percentage=80,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
+      ```shell
+      [admin@xxx oceanbase]$ /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone4 -d /home/admin/oceanbase/store/obdemo -r 'xx.xx.xx.10:2882:2881;xx.xx.xx.11:2882:2881;xx.xx.xx.12:2882:2881' -c 20190716 -n obdemo -o "memory_limit_percentage=90,memstore_limit_percentage=60,datafile_disk_percentage=80,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
       ```
 
 2. 向集群中添加节点。
@@ -129,17 +129,17 @@
       [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
       ```
 
-   2. 执行以下命令，向集群中添加节点。
+   2. 执行以下命令，向集群的 Zone 中添加节点。
 
       ```sql
-      obclient [none]> ALTER SYSTEM ADD SERVER 'SVR_IP:SVR_PORT;SVR_IP:SVR_PORT;SVR_IP:SVR_PORT' ZONE 'zone_name';
+      obclient [none]> ALTER SYSTEM ADD SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone_name'];
       ```
 
-      其中：
+      相关参数说明如下：
 
-      * `SVR_IP`：表示待添加的 OBServer 的 IP。
+      * `ip`：表示待添加的 OBServer 的 IP。
 
-      * `SVR_PORT`：表示待添加的 OBServer 的 RPC 端口。默认为 `2882`。
+      * `port`：表示待添加的 OBServer 的 RPC 端口。默认为 `2882`。
 
       * `zone_name`：表示待添加节点的 Zone。
 
@@ -160,3 +160,9 @@
    ```
 
    列表中有刚才添加的 OBServer，则表示添加成功。
+
+## 后续操作
+
+* 对于向已存在的 Zone 中增加 OBServer 的场景，添加 OBServer 成功后，如果需要进一步使用该资源，还需要调整租户的资源配置，具体操作可参见[向 Zone 内添加 OBServer 节点](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/1.scale-out/2.add-an-observer-node-to-a-zone.md)。
+
+* 对于添加 zone 并向该 Zone 中增加 OBServer 的场景，添加 OBServer 成功后，如果需要进一步使用该资源，还需要重新分配资源，并增加副本信息，具体操作可参见 [在集群中增加 Zone](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md)。
