--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/3.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/3.delete-a-node.md
@@ -1,10 +1,81 @@
 # 删除节点
 
-删除节点就是将节点中集群中移除。
-
-## 背景信息
-
-
+删除节点就是将节点从集群中移除。
 
 ## 删除节点
 
+1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+
+   连接示例如下，连接数据库时请以实际环境为准。
+
+   ```shell
+   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   ```
+
+2. 执行以下命令，删除 OBServer。
+
+   语句如下：
+
+   ```sql
+   obclient [none]> ALTER SYSTEM DELETE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone_name']
+   ```
+
+   相关参数说明如下：
+
+   * `ip`：表示待删除的节点所在的主机 IP。
+
+   * `port`：表示待删除的节点主机的 RPC 端口。
+
+   * `zone_name`：待删除的节点所属的 Zone。如果需要删除多个节点，多个节点要求必须在同一 Zone 内。
+
+   删除 `zone4` 中的一台 OBServer，示例如下：
+
+   ```sql
+   obclient [none]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.10:2882" zone='zone4'
+   ```
+
+3. （可选）删除节点的命令执行后，RootService 会根据自己的规则将待删除 OBServer 上的 Unit 迁移到其他机器上，如果想要选择 Unit 迁移的目标机器，可以进行手动迁移。
+
+   1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
+
+      ```sql
+      obclient [none]> SELECT UNIT_ID,TENANT_ID,STATUS,ZONE,SVR_IP FROM oceanbase.DBA_OB_UNITS;
+      ```
+
+   2. 根据查询结果，执行以下命令，手动迁移 Unit。
+
+      语句如下：
+
+      ```sql
+      obclient [none]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'ip:port'; 
+      ```
+
+       相关参数说明如下：
+
+       * `unit_id`：表示待迁移的 Unit 的 ID。
+
+       * `ip`：指定 Unit 迁移后的节点所在的主机 IP。
+
+       * `port`：指定 Unit 迁移后的节点主机的 RPC 端口。
+
+      将 ID 为 `1001` 的 Unit 迁移到 `xx.xx.xx.11` 服务器上的示例如下：
+
+      ```sql
+      obclient [none]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'xx.xx.xx.11:2882'; 
+      ```
+
+4. 待所有操作结束后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
+
+   ```sql
+   obclient [test]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+   ```
+
+   如果列表中已经查询不到该 OBServer，则表示删除成功。
+
+## 相关文档
+
+* [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)
+
+* [添加节点](2.add-a-node.md)
+
+* [隔离节点](4.isolation-a-node.md)
