--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/1.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/1.restart-a-node.md
@@ -50,6 +50,8 @@
 
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中该 Server 的 `STATUS` 字段，字段值仍为 `ACTIVE` 不变，但 `STOP_TIME` 字段的值由 `NULL` 变为停止服务的时间点。
 
+   查询 `oceanbase.DBA_OB_SERVERS` 视图的具体操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
+
 3. 执行以下命令，对待重启的节点进行转储操作。
 
    ```sql
@@ -162,3 +164,5 @@
    ```
 
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中的 `START_SERVICE_TIME` 字段，该字段表示节点启动服务的时间。如果该值为 `NULL`，则表示该节点的服务还没有启动。
+
+   查询 `oceanbase.DBA_OB_SERVERS` 视图的具体操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
