--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/5.add-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/5.add-a-zone.md
@@ -36,7 +36,13 @@
    obclient [none]> ALTER SYSTEM ADD ZONE zone4 IDC 'hz1', REGION 'hangzhou';
    ```
 
-   操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图，如果查询结果中有新增加的 Zone，则表示增加 Zone 成功。
+3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
+
+   ```sql
+   obclient [test]> SELECT * FROM oceanbase.DBA_OB_ZONES;
+   ```
+
+   如果查询结果中有新增加的 Zone，则表示增加 Zone 成功。
 
 ## 后续操作
 
