--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/6.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/6.delete-a-zone.md
@@ -32,7 +32,13 @@
    obclient [none]> ALTER SYSTEM DELETE ZONE zone4;
    ```
 
-   操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图，如果查询结果中没有该 Zone，则表示删除 Zone 成功。
+3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
+
+   ```sql
+   obclient [test]> SELECT * FROM oceanbase.DBA_OB_ZONES;
+   ```
+
+   如果查询结果中没有该 Zone，则表示删除 Zone 成功。
 
 ## 相关文档
 
