--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/7.modify-zone-configurations.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/7.modify-zone-configurations.md
@@ -36,7 +36,11 @@
    obclient [none]> ALTER SYSTEM ALTER ZONE zone4 SET REGION 'shanghai',IDC 'sh1';
    ```
 
-   操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图，确认 Zone 属性是否修改成功。
+3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
+
+   ```sql
+   obclient [test]> SELECT * FROM oceanbase.DBA_OB_ZONES;
+   ```
 
 ## 相关文档
 
