--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/4.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/4.isolation-a-node.md
@@ -56,29 +56,51 @@
 
    ```sql
    ALTER SYSTEM STOP SERVER 'ip:port'; 
-   ···
+   ```
+
+   示例：
+
+   ```sql
+   obclient [none]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882'; 
+   ```
 
    成功执行后，可以对节点做任何运维操作，可以直接 kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Force Stop Server 操作。
 
 3. 对问题节点执行 Force Stop Server 操作。
 
+   语句如下：
+
    ```sql
    ALTER SYSTEM FORCE STOP SERVER 'ip:port'; 
+   ```
+
+   示例：
+
+   ```sql
+   obclient [none]> ALTER SYSTEM FORCE STOP SERVER 'xx.xx.xx.10:2882'; 
    ```
 
    成功执行后可以对节点做任何运维操作，可以直接 kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Isolate Server 操作。
 
 4. 对问题节点执行 Isolate Server 操作。
 
+   语句如下：
+
    ```sql
    ALTER SYSTEM ISOLATE SERVER 'ip:port'; 
    ```
 
-   成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能直接 kill observer 进程。如果 kill observer 进程，可能有如下问题：
+   示例：
 
-   * 集群中所有分区副本完好，但问题节点上存在Leader，kill server后出现部分分区副本无主选举，短时间影响业务流量。
+   ```sql
+   obclient [none]> ALTER SYSTEM ISOLATE SERVER 'xx.xx.xx.10:2882'; 
+   ```
 
-   * 集群中存在部分分区已经缺副本，但依然能够达成多数派，kill server后导致部分分区无法形成多数派，这些分区在kill server后会长时间无主，长时间影响业务流量。
+   成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能直接 Kill observer 进程。如果 Kill observer 进程，可能有如下问题：
+
+   * 集群中所有分区副本完好，但问题节点上存在 Leader，Kill observer 进程后出现部分分区副本无主选举，短时间影响业务流量。
+
+   * 集群中存在部分分区已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分分区无法形成多数派，这些分区在 Kill observer 后会长时间无主，长时间影响业务流量。
 
 5. 使用 `kill -9 pid` 命令 Kill observer 进程。
 
